# mediameta

./: CHANGELOG.md  Cargo.toml  README.md  mediainfo.md
.github/: dependabot.yml
.github/workflows/: release-plz.yml  rust.yml
examples/: combined_ls.rs  file_info.rs  ls.rs  mediainfo.rs  mediainfo_ls.rs
scripts/: docs.ps1  test.ps1
src/: error.rs  exif_helper.rs  lib.rs  mediainfo.rs  mediainfo_helper.rs  mkv_helper.rs  mp4_helper.rs
src/mediainfo/: helper.rs
test-data/: sample-mkv-files-sample_640x360_with_date.test  source.txt
tests/: mkv.rs  mp4.rs  tests.rs
tests/tests/: exif.rs  extract_file_creation_date.rs  mediainfo.rs  metadata.rs  mkv.rs  mp4.rs
