[package]
name = "mediameta"
version = "0.1.3"
edition = "2021"
description = "This library provides a straightforward API to extract metadata from media files."
homepage = "https://github.com/Vaiz/mediameta"
repository = "https://github.com/Vaiz/mediameta"
readme = "README.md"
keywords = ["mp4", "mkv", "media", "mediainfo", "exif"]
license = "Unlicense"
authors = ["Vaiz"]
rust-version = "1.80.0"
exclude = [".github", "test-data/**", "tests/**", "scripts/**"]

[dependencies]
anyhow = "1.0.91"
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
cmd_lib = { version = "1.9.5", optional = true }
image = { version = "0.25.4", optional = true }
kamadak-exif = "0.6.1"
log = { version = "0.4.22", optional = true }
matroska = "0.28.0"
mp4 = "0.14.0"
serde = { version = "1.0.214", optional = true, features = ["derive"] }
serde_json = { version = "1.0.132", optional = true }
which = { version = "7.0.2", optional = true }

[features]
image = ["dep:image"]
mediainfo = ["dep:cmd_lib", "dep:serde", "dep:serde_json", "dep:which", "dep:log"]

[dev-dependencies]
colog = "1.3.0"

[patch.crates-io]
mp4 = { git = "https://github.com/alfg/mp4-rust.git", rev = "35560e94f5e871a2b2d88bfe964013b39af131e8" } # fix 'avcc not found'

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "combined_ls"
required-features = ["mediainfo"]

[[example]]
name = "mediainfo"
required-features = ["mediainfo"]

[[example]]
name = "mediainfo_ls"
required-features = ["mediainfo"]

