[package]
name = "mediameta"
version = "0.2.3"
edition = "2021"
description = "This library provides a straightforward API to extract metadata from media files."
homepage = "https://github.com/Vaiz/mediameta"
repository = "https://github.com/Vaiz/mediameta"
readme = "README.md"
keywords = ["mp4", "mkv", "media", "mediainfo", "exif"]
license = "Unlicense"
authors = ["Vaiz"]
rust-version = "1.80.0"
exclude = [".github", "test-data/**", "tests/**", "scripts/**"]

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = ["std"] }
cmd_lib = { version = "2.0.0", optional = true }
image = { version = "0.25.6", optional = true }
kamadak-exif = "0.6.1"
log = { version = "0.4.27", optional = true }
matroska = "0.30.0"
mp4 = { package = "re_mp4", version = "0.3.0" }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"
which = { version = "8.0.0", optional = true }

[features]
image = ["dep:image"]
mediainfo = ["dep:cmd_lib", "dep:serde", "dep:serde_json", "dep:which", "dep:log"]

[dev-dependencies]
anyhow = "1.0.98"
colog = "1.4.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "combined_ls"
required-features = ["mediainfo"]

[[example]]
name = "mediainfo"
required-features = ["mediainfo"]

[[example]]
name = "mediainfo_ls"
required-features = ["mediainfo"]
